--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,9 @@ p {
     font-size: 15px;
 }
 
+/* Add padding between the div sections */
+
+
 /* Ensure padding is included in the total width calculation */
 .pure-u-1-3, .pure-u-8-24, .pure-u-4-24 {
     box-sizing: border-box; /* Include padding and border in the width */
