--- a/css/styles.css
+++ b/css/styles.css
@@ -35,9 +35,6 @@ p {
     font-size: 15px;
 }
 
-/* Add padding between the div sections */
-
-
 /* Ensure padding is included in the total width calculation */
 .pure-u-1-3, .pure-u-8-24, .pure-u-4-24 {
     box-sizing: border-box; /* Include padding and border in the width */
@@ -47,6 +44,12 @@ p {
 /* Set some padding for the visualizations */
 .vis-container {
     margin: 20px 0;
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%; /* Make sure it has a height */
+
 }
 
 /* Optional styling for images inside the content */
